--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,11 @@ jobs:
               with:
                   go-version: "1.23.0"
 
+            - name: Install staticcheck
+              run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
             - name: Check code formatting
               run: test -z $(go fmt ./...)
+
+            - name: Staticcheck code linting
+              run: staticcheck ./...
