--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,3 +21,16 @@ jobs:
 
             - name: Build
               run: ./scripts/buildprod.sh
+
+            - id: "auth"
+              uses: "google-github-actions/auth@v2"
+              with:
+                  credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+
+            - name: "Set up Cloud SDK"
+              uses: "google-github-actions/setup-gcloud@v2"
+              with:
+                  version: ">= 363.0.0"
+
+            - name: "Use gcloud CLI"
+              run: "gcloud info"
