--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,3 +37,6 @@ jobs:
 
             - name: "Build, tag, and push image to Google Container Registry"
               run: "gcloud builds submit --tag us-central1-docker.pkg.dev/notely-thihxm/notely-ar-repo/notely:latest ."
+
+            - name: "Deploy to Cloud Run"
+              run: "gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-thihxm/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-thihxm --max-instances=4"
