--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,17 +10,29 @@ jobs:
         runs-on: ubuntu-latest
         timeout-minutes: 30
 
+        env:
+            DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
         steps:
-            - name: Check out code
+            - name: "Check out code"
               uses: actions/checkout@v4
 
-            - name: Set up Go
+            - name: "Set up Go"
               uses: actions/setup-go@v5
               with:
                   go-version: "1.23.0"
 
-            - name: Build
-              run: ./scripts/buildprod.sh
+            - name: "Build"
+              run: "./scripts/buildprod.sh"
+
+            - name: "Install goose"
+              run: "go install github.com/pressly/goose/v3/cmd/goose@latest"
+
+            - name: "Use goose CLI"
+              run: "goose -version"
+
+            - name: "Migrate DB"
+              run: "./scripts/migrateup.sh"
 
             - id: "auth"
               uses: "google-github-actions/auth@v2"
